--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "gatsby-plugin-react-svg":"^3.0.0"
+    "gatsby-plugin-react-svg":"^3.0.0",
+    "gatsby-plugin-modal-routing":"1.1.0"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
