hide the item-time

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "clean2": "rm -rf node_modules/gh-pages/.cache",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
     "deploy": "gatsby build --prefix-paths && gh-pages -d public"
   },
